--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="manifest" href="manifest.json">
-  <title>SD v.1.0.</title>
+  <title>SD v.2.0.</title>
 </head>
 
 <body>
@@ -19,13 +19,13 @@
   <div class="app">
 
     <div class="temporary">
-      <input type="number" class="input">
+      <div class="display_number"></div>
       <button class="btn btn_move">Go</button>
     </div>
 
     <div class="main_steps_grid_container">
 
-      <div class="cell" id="1">Finish</div>
+      <div class="cell" id="1">Finish Player 2</div>
 
       <div class="cell" id="2"></div>
       <div class="cell" id="3"></div>
@@ -47,7 +47,7 @@
       <div class="cell" id="15"></div>
       <div class="cell" id="16"></div>
 
-      <div class="cell" id="17">Finish</div>
+      <div class="cell" id="17">Finish Player 1</div>
 
     </div>
 
